Use BFF NPM package

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@
 - README file
 - .gitignore (don't ignore the files used by the example)
 - Run automated browser tests
+- Build minified/concatenated version
